# cameras_db

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  readme.py  setup.py
cameras_db/: CsvToJsonConverter.py  cameras_db.db  db_creator_util.py
cameras_db/setup/: CameraCSVProcessor.py  cameras-all.csv  setup_db.py
src/cameras_db/: __init__.py  constants.py  controllers.py
src/cameras_db/models/: Camera.py  __init__.py
src/cameras_db/setup/: CameraDBFiller.py  README.md  cameras_to_json.py
tests/: test_camera.py  test_controllers.py
